[project]
name = "urban-analytics"
version = "0.1.0"
description = "面向城市街道环境的大数据采集与分析平台"
requires-python = ">=3.13"
dependencies = [
    "earthengine-api>=1.7.26",
    "folium>=0.19",
    "geopandas>=1.1.3",
    "matplotlib>=3.10",
    "osmnx>=2.1.0",
    "pandas>=2.2",
    "PyQt6>=6.0",
    "PyQt6-WebEngine>=6.0",
    "requests>=2.34.2",
    "shapely>=2.0",
]
