[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "urban-analytics"
version = "0.1.0"
description = "面向城市街道环境的大数据采集与分析平台"
requires-python = ">=3.10"
dependencies = [
    "earthengine-api>=1.7.26",
    "folium>=0.19",
    "geopandas>=1.1.3",
    "matplotlib>=3.10",
    "osmnx>=2.1.0",
    "pandas>=2.2",
    "PyQt6>=6.0",
    "PyQt6-WebEngine>=6.0",
    "requests>=2.34.2",
    "shapely>=2.0",
]

[project.optional-dependencies]
# 遥感模块依赖较重，可作为可选
remote-sensing = ["earthengine-api>=1.7.26"]

[project.scripts]
urban-analytics = "app:main"    # 需要 app.py 中定义 main()

[tool.hatch.build.targets.wheel]
packages = ["."]
